--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
           base: ${{ github.ref_name }}
           filters: |
             build:
+              - '.github/workflows/**'
               - 'image/**'
               - 'kernel/**'
               - 'scripts/compile-kernel.sh'
@@ -107,13 +108,10 @@ jobs:
           path: ./
 
       - name: send to releases
-        uses: svenstaro/upload-release-action@v2
+        uses: softprops/action-gh-release@v1
         with:
-          repo_token: "${{ github.token }}"
-          tag: ${{ github.ref_name }}
-          file: artifact/*
-          file_glob: true
-          overwrite: true
+          tag_name: ${{ github.ref_name }}
+          files: artifact/*
 
   riscv64-test:
     runs-on: ubuntu-latest
